add gridsearch part_2

--- a/прогнозирование оттока клиентов.ipynb
+++ b/прогнозирование оттока клиентов.ipynb
@@ -1205,14 +1205,14 @@
      "output_type": "stream",
      "text": [
       "roc_auc: 0.8192086209086675\n",
-      "F1: 0.5982658959537572\n",
+      "F1: 0.5692007797270955\n",
       "best_param:  {'max_depth': 7, 'min_samples_leaf': 2, 'min_samples_split': 15}\n"
      ]
     }
    ],
    "source": [
     "print('roc_auc:', roc_auc_score(target_valid, model.predict_proba(features_valid)[:, 1]))\n",
-    "print('F1:', f1_score(target_valid, predicted_valid)) \n",
+    "print('F1:', f1_score(target_valid, model.predict(features_valid)))\n",
     "print('best_param: ', model.best_params_)"
    ]
   },
@@ -1248,14 +1248,14 @@
      "output_type": "stream",
      "text": [
       "roc_auc: 0.8476747984200242\n",
-      "F1: 0.5982658959537572\n",
+      "F1: 0.6233128834355829\n",
       "best_param:  {'criterion': 'entropy', 'max_depth': 14, 'min_samples_leaf': 3, 'n_estimators': 145}\n"
      ]
     }
    ],
    "source": [
     "print('roc_auc:', roc_auc_score(target_valid, model.predict_proba(features_valid)[:, 1]))\n",
-    "print('F1:', f1_score(target_valid, predicted_valid)) \n",
+    "print('F1:', f1_score(target_valid, model.predict(features_valid)))\n",
     "print('best_param: ', model.best_params_)"
    ]
   },
@@ -1301,82 +1301,87 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best_depth = 7\n",
-      "F1: 0.5844004656577416\n",
-      "AUC_ROC: 0.8158431577737587\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "# Обучим модель решающего дерева\n",
-    "best_depth = 0\n",
-    "f1_best = 0\n",
-    "AUC_ROC_best = 0\n",
-    "for depth in range(1, 20, 1):\n",
-    "    model = DecisionTreeClassifier(max_depth=depth, random_state=12345)\n",
-    "    model.fit(features_downsampled, target_downsampled)\n",
-    "    predicted_valid = model.predict(features_valid)\n",
-    "    probabilities_valid = model.predict_proba(features_valid)\n",
-    "    probabilities_one_valid = probabilities_valid[:, 1]\n",
-    "    f1 = f1_score(target_valid, predicted_valid)\n",
-    "    if f1 > f1_best:\n",
-    "        f1_best = f1\n",
-    "        best_depth = depth\n",
-    "        AUC_ROC_best = roc_auc_score(target_valid, probabilities_one_valid)  \n",
-    "        \n",
-    "print('best_depth =', best_depth)   \n",
-    "print('F1:',f1_best, )  \n",
-    "print('AUC_ROC:', AUC_ROC_best)  "
+    "parametrs = {\n",
+    "    'max_depth': range(2,8,1),\n",
+    "    'min_samples_split': range(5,30,5), \n",
+    "    'min_samples_leaf': [2, 3, 4, 5, 7],}\n",
+    "model = GridSearchCV(DecisionTreeClassifier(random_state=12345),\n",
+    "                 parametrs,\n",
+    "                 scoring = 'f1',\n",
+    "                 n_jobs = -1)\n",
+    "model = model.fit(features_downsampled, target_downsampled) \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best_depth = 10\n",
-      "best_est = 145\n",
-      "F1: 0.6332916145181477\n",
-      "AUC_ROC: 0.8499915315239022\n"
+      "roc_auc: 0.8265709023161282\n",
+      "F1: 0.5827338129496402\n",
+      "best_param:  {'max_depth': 6, 'min_samples_leaf': 7, 'min_samples_split': 25}\n"
      ]
     }
    ],
    "source": [
+    "print('roc_auc:', roc_auc_score(target_valid, model.predict_proba(features_valid)[:, 1]))\n",
+    "print('F1:', f1_score(target_valid, model.predict(features_valid))) \n",
+    "print('best_param: ', model.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "# Обучим модель случайного леса\n",
-    "best_depth = 0\n",
-    "best_est = 0\n",
-    "f1_best = 0\n",
-    "AUC_ROC_best = 0\n",
-    "for depth in range(5, 15, 1):\n",
-    "    best_result = 0\n",
-    "    for est in range(50, 150, 5):\n",
-    "        model = RandomForestClassifier(n_estimators=est, max_depth=depth, random_state=12345)\n",
-    "        model.fit(features_downsampled, target_downsampled)\n",
-    "        predicted_valid = model.predict(features_valid)\n",
-    "        f1 = f1_score(target_valid, predicted_valid)\n",
-    "        probabilities_valid = model.predict_proba(features_valid)\n",
-    "        probabilities_one_valid = probabilities_valid[:, 1]\n",
-    "        if f1 > f1_best:\n",
-    "            f1_best = f1\n",
-    "            best_depth = depth\n",
-    "            best_est = est\n",
-    "            AUC_ROC_best = roc_auc_score(target_valid, probabilities_one_valid)\n",
-    "print('best_depth =', best_depth)   \n",
-    "print('best_est =', best_est)  \n",
-    "print('F1:',f1_best)  \n",
-    "print('AUC_ROC:', AUC_ROC_best)  "
+    "parametrs = {\n",
+    "    'criterion':['gini','entropy'],\n",
+    "    'n_estimators': range(50,150,5),\n",
+    "    'max_depth': range(1,15,1),\n",
+    "    'min_samples_leaf': [3, 4, 5, 10],}\n",
+    "\n",
+    "model = GridSearchCV(RandomForestClassifier(random_state=12345),\n",
+    "                     parametrs, \n",
+    "                     scoring = 'f1',\n",
+    "                     n_jobs = -1)\n",
+    "model = model.fit(features_downsampled, target_downsampled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "roc_auc: 0.8498115764068256\n",
+      "F1: 0.6131025957972805\n",
+      "best_param:  {'criterion': 'entropy', 'max_depth': 13, 'min_samples_leaf': 3, 'n_estimators': 145}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('roc_auc:', roc_auc_score(target_valid, model.predict_proba(features_valid)[:, 1]))\n",
+    "print('F1:', f1_score(target_valid, model.predict(features_valid)))\n",
+    "print('best_param: ', model.best_params_)"
    ]
   },
   {
@@ -1395,23 +1400,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1: 0.6066897347174163\n",
-      "AUC_ROC: 0.8517609070098984\n",
-      "recall: 0.6217494089834515\n",
-      "precision: 0.5923423423423423\n"
+      "F1: 0.6109324758842444\n",
+      "AUC_ROC: 0.8543663268227819\n",
+      "recall: 0.6737588652482269\n",
+      "precision: 0.5588235294117647\n"
      ]
     }
    ],
    "source": [
-    "model = RandomForestClassifier(n_estimators=135, max_depth=8, random_state=12345)\n",
-    "model.fit(features_upsampled, target_upsampled)\n",
+    "model = RandomForestClassifier(n_estimators=130, max_depth=8, class_weight='balanced', random_state=12345)\n",
+    "model.fit(features_train, target_train)\n",
     "predicted_test = model.predict(features_test)\n",
     "probabilities_test = model.predict_proba(features_test)\n",
     "probabilities_one_test = probabilities_test[:, 1]\n",
@@ -1434,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1449,7 @@
       "F1: 0.0\n",
       "AUC_ROC: 0.5\n",
       "recall: 0.0\n",
-      "precision: 0.5923423423423423\n"
+      "precision: 0.638961038961039\n"
      ]
     }
    ],
